Change copyright name in footer

--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
           </div>
         </div>
                         
-        <div class="card mb-3">
+        <!-- <div class="card mb-3">
           <img src="img/BMC QR Code 150 x 150 PNG.png" class="card-img-top" alt="Placeholder Image">
           <div class="card-body text-center">
             <a href="https://buymeacoffee.com/william305" target="_blank" rel="noopener noreferrer"
               class="btn btn-sm btn-outline-primary-custom ">Support William305.com</a>
           </div>
-        </div>
-        <div class="card mb-3">
+        </div> -->
+        <!-- <div class="card mb-3">
           <img src="img/Buy Me A Beer Advert 2  2.jpg" class="card-img-top" alt="Placeholder Image">
           <div class="card-body text-center">
             <a href="https://buymeacoffee.com/william305" target="_blank" rel="noopener noreferrer"
               class="btn btn-sm btn-outline-primary-custom ">Buy Me A Beer</a>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="card mb-3">
           <img src="img/Buy Me A Burger 2 Cropped.jpg" class="card-img-top" alt="Placeholder Image">
           <div class="card-body text-center">
@@ -284,7 +284,7 @@
             <a href="https://x.com/william305eats" target="_blank" class="me-3"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://x.com/william305eats" target="_blank" class="me-3"><i class="fab fa-instagram"></i></a>
           </div>
-          <p class="mt-3">© 2024 William305 All rights reserved.</p>
+          <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
         </div>
       </div>
     </div>
