--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <!-- <span class="material-icons">volunteer_activism</span> -->
                 </div>
                 <div class="card-body text-center">
-                  <a href="Videos.html" class="btn  btn-outline-light btn-dark">Charity Walks</a>
+                  <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Charity Walks</a>
                 </div>
                 <!-- <div class="card-body">
                   <h5 class="card-title">Card Title 1</h5>
@@ -132,7 +132,7 @@
                   <!-- <span class="material-icons">volunteer_activism</span> -->
                 </div>
                 <div class="card-body text-center">
-                  <a href="Videos.html" class="btn  btn-outline-light btn-dark">Shoes</a>
+                  <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Shoes</a>
                 </div>
                 <!-- <div class="card-body">
                   <h5 class="card-title">Card Title 1</h5>
