Switched VCA Animals link to Human Society for better legitimacy

--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -108,7 +108,7 @@
                         <!-- Event 1 -->
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
-                                <a href="https://secure.qgiv.com/event/2025walkfortheanimals/" rel="noopener noreferrer" target="_blank">
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" rel="noopener noreferrer" target="_blank">
                                     <img src="img/VCA Walk.JPG" class="card-img-top" alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body">
@@ -117,7 +117,7 @@
                                     <p class="card-text"><strong>Location:</strong> 80 Las Olas Circle
                                         Fort Lauderdale, FL 33316 United</p>
                                     <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
-                                    <a href="https://secure.qgiv.com/event/2025walkfortheanimals/" class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
+                                    <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
                         </div>
