Navbar links now all point to CharityWalks.html on both index and CharityWalks navbars

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
           </li> -->
 
           <li class="nav-item">
-            <a class="nav-link" href="News.html">Charity Walks</a>
+            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Events.html">Shoes</a>
+            <a class="nav-link" href="CharityWalks.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="CharityWalks.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="CharityWalks.html">Contact</a>
           </li>
         </ul>
       </div>
