--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -47,38 +47,38 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <!-- <li class="nav-item">
-            <a class="nav-link" href="Videos.html">Videos</a>
-          </li> -->
-                    <!-- <li class="nav-item">
-            <a class="nav-link" href="Food&Beverage.html">Food & Beverage</a>
-          </li> -->
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="News.html">Charity Walks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Events.html">Shoes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="About.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="Videos.html">Videos</a>
+              </li> -->
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="Food&Beverage.html">Food & Beverage</a>
+              </li> -->
+    
+              <li class="nav-item">
+                <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="CharityWalks.html">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="CharityWalks.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="CharityWalks.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <!-- Main Content Section with Sidebars -->
     <div class="container">
