--- a/Shoes.html
+++ b/Shoes.html
@@ -8,13 +8,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" />
+
+
+
     <link href="styles.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
@@ -57,12 +59,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-            <a class="nav-link" href="Videos.html">Videos</a>
-          </li> -->
-                    <!-- <li class="nav-item">
-            <a class="nav-link" href="Food&Beverage.html">Food & Beverage</a>
-          </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
@@ -103,7 +99,6 @@
 
                 <div class="title-section text-center d-lg-block d-none mb-5">
                     <h1>Shoes </h1>
-                    <!-- <p class="lead">Discover Miami through food, culture, and lifestyle.</p> -->
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
@@ -112,49 +107,32 @@
                             <div class="card">
                                 <div class="d-flex justify-content-center align-items-center">
                                     <span class="material-symbols-outlined material-icons">steps</span>
-                                    <!-- <span class="material-icons">volunteer_activism</span> -->
                                 </div>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Exercise
+                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Exercise
                                         Shoes</a>
                                 </div>
-                                <!-- <div class="card-body">
-                  <h5 class="card-title">Card Title 1</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                </div> -->
+
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
                                 <div class="d-flex justify-content-center align-items-center">
-                                    <span class="material-symbols-outlined  material-icons material-icons-shoes">
-                                        podiatry
-                                    </span>
-                                    <!-- <i class="fa-solid fa-shoe-prints fa-rotate-270 material-icons-shoes"></i> -->
-                                    <!-- <i class="fa-solid fa-person-walking material-icons"></i> -->
-                                    <!-- <span class="material-symbols-outlined material-icons ">footprint</span> -->
 
-                                    </span>
+                                    <i class="fa-solid fa-shoe-prints fa-rotate-270 material-icons-shoes"></i>
+
+
                                 </div>
                                 <div class="card-body text-center">
                                     <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Comfort
                                         Shoes</a>
                                 </div>
-                                <!-- <div class="card-body">
-                                <h5 class="card-title">Card Title 1</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                  card's content.</p>
-                              </div> -->
+
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-                <!-- Main Content -->
             </div>
-
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
 
