--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Shoes</a>
+            <a class="nav-link" href="Shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="CharityWalks.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Contact</a>
+            <a class="nav-link" href="Shoes.html">Contact</a>
           </li>
         </ul>
       </div>
