Shoes title now comes out in small screens

--- a/Shoes.html
+++ b/Shoes.html
@@ -97,7 +97,7 @@
 
             <div class="col-12 col-lg-8">
 
-                <div class="title-section text-center d-lg-block d-none mb-5">
+                <div class="title-section text-center  mb-5">
                     <h1>Shoes </h1>
                 </div>
                 <!-- Card Grid -->
