--- a/ExerciseShoes.html
+++ b/ExerciseShoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoes - MiamiWalking.com - Miami</title>
+    <title>Exercise Shoes - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -98,34 +98,39 @@
             <div class="col-12 col-lg-8">
 
                 <div class="title-section text-center  mb-5">
-                    <h1>Shoes </h1>
+                    <h1>Exercise Shoes </h1>
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <div class="d-flex justify-content-center align-items-center">
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Ryka Womens Shoes 2 .jpg" class="card-img-top" alt="Event 1 Image - Description of the event" loading="lazy">
+                                </a>
+                                <!-- <div class="d-flex justify-content-center align-items-center">
                                     <span class="material-symbols-outlined material-icons">steps</span>
-                                </div>
+                                </div> -->
                                 <div class="card-body text-center">
-                                    <a href="ExerciseShoes.html" class="btn btn-outline-light btn-dark">Exercise
-                                        Shoes</a>
+                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Ryka Women's Devotion Plus 2</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <div class="d-flex justify-content-center align-items-center">
+
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Hoka Clifton 9 Womens 2.jpg" class="card-img-top mb-2" alt="Event 1 Image - Description of the event" loading="lazy">
+                                </a>
+                                <!-- <div class="d-flex justify-content-center align-items-center">
 
                                     <i class="fa-solid fa-shoe-prints fa-rotate-270 material-icons-shoes"></i>
 
 
-                                </div>
+                                </div> -->
                                 <div class="card-body text-center">
-                                    <a href="ComfortShoes.html" class="btn  btn-outline-light btn-dark">Comfort
-                                        Shoes</a>
+                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">HOKA ONE ONE Clifton 9 </a>
                                 </div>
 
                             </div>
