Added Shoes.html link in Navbar in CharityWalks.html

--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -67,7 +67,7 @@
                 <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="CharityWalks.html">Shoes</a>
+                <a class="nav-link" href="Shoes.html">Shoes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="CharityWalks.html">About</a>
