Removed side widgets from index.html but kept the sidebar divs to keep the spaces occupied and the Main Section centered.

--- a/index.html
+++ b/index.html
@@ -56,13 +56,6 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="Videos.html">Videos</a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="Food&Beverage.html">Food & Beverage</a>
-          </li> -->
-
           <li class="nav-item">
             <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
           </li>
@@ -85,14 +78,7 @@
     <div class="row mt-5">
       <!-- Left Sidebar -->
       <div class="col-lg-2 d-none d-lg-block">
-
-        <!-- <div class="card mb-3" style="max-width: 18rem;"> -->
-        <fxwidget-er class="card" inverse="false" amount="100" decimals="2" large="false" shadow="true" symbol="true"
-          flag="true" changes="true" grouping="true" main-curr="USD" sel-curr="BRL,MXN,ARS,COP,CUP,NIO,VES"
-          background-color="#fafbfa" border-radius="0.35"></fxwidget-er><a href="https://currencyrate.today/"></a>
-        <script async src="https://s.fx-w.io/widgets/exchange-rates/latest.js"></script>
-
-
+        <!-- Keeps sidebar space occuppied -->
       </div>
 
       <!-- Main Section -->
@@ -134,26 +120,11 @@
             </div>
           </div>
         </div>
-
-
-        <!-- Main Content -->
       </div>
 
       <!-- Right Sidebar -->
       <div class="col-lg-2 d-none d-lg-block">
-
-        <a class="card mb-3 weatherwidget-io" href="https://forecast7.com/en/25d76n80d19/miami/?unit=us"
-          data-label_1="MIAMI" data-label_2="WEATHER" data-days="3" data-theme="clear">MIAMI WEATHER</a>
-        <script>
-          !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-        </script>
-
-
-
-
-
-
-
+        <!-- Keeps sidebar space occuppied -->
       </div>
     </div>
   </div>
