--- a/ExerciseShoes.html
+++ b/ExerciseShoes.html
@@ -8,7 +8,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -82,15 +83,7 @@
         <div class="row mt-5">
             <!-- Left Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
-
-                <!-- <div class="card mb-3" style="max-width: 18rem;"> -->
-                <fxwidget-er class="card" inverse="false" amount="100" decimals="2" large="false" shadow="true"
-                    symbol="true" flag="true" changes="true" grouping="true" main-curr="USD"
-                    sel-curr="BRL,MXN,ARS,COP,CUP,NIO,VES" background-color="#fafbfa"
-                    border-radius="0.35"></fxwidget-er><a href="https://currencyrate.today/"></a>
-                <script async src="https://s.fx-w.io/widgets/exchange-rates/latest.js"></script>
-
-
+                <!-- Keeps sidebar space occuppied -->
             </div>
 
             <!-- Main Section -->
@@ -105,14 +98,17 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Ryka Womens Shoes 2 .jpg" class="card-img-top" alt="Event 1 Image - Description of the event" loading="lazy">
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                    rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Ryka Womens Shoes 2 .jpg" class="card-img-top"
+                                        alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <!-- <div class="d-flex justify-content-center align-items-center">
                                     <span class="material-symbols-outlined material-icons">steps</span>
                                 </div> -->
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Ryka Women's Devotion Plus 2</a>
+                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Ryka Women's
+                                        Devotion Plus 2</a>
                                 </div>
 
                             </div>
@@ -120,8 +116,10 @@
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
 
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/" rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Hoka Clifton 9 Womens 2.jpg" class="card-img-top mb-2" alt="Event 1 Image - Description of the event" loading="lazy">
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                    rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Hoka Clifton 9 Womens 2.jpg" class="card-img-top mb-2"
+                                        alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <!-- <div class="d-flex justify-content-center align-items-center">
 
@@ -130,7 +128,8 @@
 
                                 </div> -->
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">HOKA ONE ONE Clifton 9 </a>
+                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">HOKA ONE ONE
+                                        Clifton 9 </a>
                                 </div>
 
                             </div>
@@ -140,19 +139,7 @@
             </div>
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
-
-                <a class="card mb-3 weatherwidget-io" href="https://forecast7.com/en/25d76n80d19/miami/?unit=us"
-                    data-label_1="MIAMI" data-label_2="WEATHER" data-days="3" data-theme="clear">MIAMI WEATHER</a>
-                <script>
-                    !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-                </script>
-
-
-
-
-
-
-
+                <!-- Keeps sidebar space occuppied -->
             </div>
         </div>
     </div>
