--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -92,7 +92,7 @@
 
             <div class="col-12 col-lg-8">
 
-                <div class="title-section text-center d-lg-block d-none mb-5">
+                <div class="title-section text-center  mb-5">
                     <h1>South Florida Charity Walks </h1>
                     <!-- <p class="lead">Discover Miami through food, culture, and lifestyle.</p> -->
                 </div>
