Added Madd event to CharityWalks.html

--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -173,7 +173,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Sandy Sprint Hollywood Broadwalk 5K Run/Walk</h5>
                                     <p class="card-text"><strong>Date:</strong> February 23, 2025 </p>
-                                    <p class="card-text"><strong>Location:</strong> Charnow Park 300 Connecticut Street
+                                    <p class="card-text"><strong>Location:</strong> Charnow Park <br> 300 Connecticut Street
                                         Hollywood, FL 33019</p>
                                     <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://sandyovarian.org/programs-and-events/events/sandy-sprint-5k-run-walk-hollywood"
@@ -199,6 +199,28 @@
                                     </p>
                                     <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://www.walk4friendshipboca.com/"
+                                        class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            <div class="card h-100">
+                                <a href="https://www.walklikemadd.org/index.cfm?fuseaction=donorDrive.event&eventID=1707"
+                                    rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Madd Chairty Walk April 2025  2.jpg" class="card-img-top"
+                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">2025 Walk Like MADD & MADD Dash Fort Lauderdale 5K </h5>
+                                    <p class="card-text"><strong>Date:</strong> April 27, 2025   </p>
+                                    <p class="card-text"><strong>Location:</strong> <br>
+                                        SE 1st Avenue & Las Olas Blvd.
+                                        Fort Lauderdale, FL 33301
+
+                                    </p>
+                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
+                                    <a href="https://www.walklikemadd.org/index.cfm?fuseaction=donorDrive.event&eventID=1707"
                                         class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
