--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -356,14 +356,14 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Follow Us</h5>
                     <div class="d-flex justify-content-start">
-                        <a href="https://x.com/william305eats" target="_blank" class="me-3"><i
+                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/william305eats" target="_blank" class="me-3"><i
+                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-x-twitter"></i></a>
                         <!-- Changed this line -->
-                        <a href="https://x.com/william305eats" target="_blank" class="me-3"><i
+                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-linkedin-in"></i></a>
-                        <a href="https://x.com/william305eats" target="_blank" class="me-3"><i
+                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
                     <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
