--- a/Shoes.html
+++ b/Shoes.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" /> -->
 
 
 
@@ -96,7 +97,7 @@
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
+                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4">                            
                             <div class="card">
                                 <div class="d-flex justify-content-center align-items-center">
                                     <span class="material-symbols-outlined material-icons">steps</span>
@@ -112,7 +113,11 @@
                             <div class="card">
                                 <div class="d-flex justify-content-center align-items-center">
 
-                                    <i class="fa-solid fa-shoe-prints fa-rotate-270 material-icons-shoes"></i>
+                                    <span class="material-symbols-outlined material-icons">
+                                        podiatry
+                                        </span>
+
+                                    <!-- <i class="fa-solid fa-shoe-prints fa-rotate-270 material-icons-shoes"></i> -->
 
 
                                 </div>
