Added Mens and Womens shoe html pages

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <!-- <span class="material-icons">volunteer_activism</span> -->
                 </div>
                 <div class="card-body text-center">
-                  <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Charity Walks</a>
+                  <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Charity Walks</a>
                 </div>
 
               </div>
@@ -113,7 +113,7 @@
                   <span class="material-symbols-outlined material-icons">steps</span>
                 </div>
                 <div class="card-body text-center">
-                  <a href="Shoes.html" class="btn  btn-outline-light btn-dark">Shoes</a>
+                  <a href="Shoes.html" class="btn  btn-outline-light btn-primary">Shoes</a>
                 </div>
 
               </div>
