--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoes - MiamiWalking.com - Miami</title>
+    <title>Women's Shoes - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" /> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <!-- <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" /> -->
 
 
 
@@ -91,35 +91,35 @@
             <div class="col-12 col-lg-8">
 
                 <div class="title-section text-center  mb-5">
-                    <h1>Shoes </h1>
+                    <h1>Women's Shoes </h1>
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
-
                             <div class="card">
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <img src="img/Male Symbol 24 pxl.svg" class="card-img-top svg-card-img"
-                                        alt="Description of image">
-                                    <!-- <span class="material-symbols-outlined material-icons">steps</span> -->
-                                </div>
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                    rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Hoka Clifton 9 Womens 3 - Copy.jpg" class="card-img-top"
+                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                                </a>
                                 <div class="card-body text-center">
-                                    <a href="MensShoes.html" class="btn btn-outline-light btn-primary">Men's Shoes</a>
+                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">Excercise
+                                        Shoes</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <div class="d-flex justify-content-center align-items-center">
 
-                                    <img src="img/Female Symbol 24 pxl.svg" class="card-img-top svg-card-img material-icons"
-                                    alt="Description of image">                                 
-
-                                </div>
+                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                    rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Sketchers Women Slip On 2.jpg" class="card-img-top mb-4"
+                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                                </a>
                                 <div class="card-body text-center">
-                                    <a href="WomensShoes.html" class="btn  btn-outline-light btn-primary">Woman's Shoes</a>
+                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual  Shoes</a>
                                 </div>
 
                             </div>
