--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -8,14 +8,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" /> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <!-- <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" /> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 
 
     <link href="styles.css" rel="stylesheet">
@@ -119,7 +115,8 @@
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual  Shoes</a>
+                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual
+                                        Shoes</a>
                                 </div>
 
                             </div>
@@ -180,13 +177,12 @@
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-x-twitter"></i></a>
-                        <!-- Changed this line -->
                         <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-linkedin-in"></i></a>
                         <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
-                    <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
+                    <p class="mt-3">© 2025 MiamiWalking.com All rights reserved.</p>
                 </div>
             </div>
         </div>
