--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -126,6 +126,15 @@
             </div>
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
+        
+          <div class="card mb-3">
+            <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
+            <div class="card-body text-center">
+              <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
+                class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
+            </div>
+          </div>
+         
                 <!-- Keeps sidebar space occuppied -->
             </div>
         </div>
