Added href link to image in right sidebar add to sale at the Walking Co.

--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -100,7 +100,7 @@
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">Excercise
+                                    <a href="WomensExerciseShoes.html" class="btn btn-outline-light btn-primary">Excercise
                                         Shoes</a>
                                 </div>
 
@@ -115,7 +115,7 @@
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual
+                                    <a href="WomensCasualShoes.html" class="btn  btn-outline-light btn-primary">Casual
                                         Shoes</a>
                                 </div>
 
@@ -127,13 +127,16 @@
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
         
-          <div class="card mb-3">
-            <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
-            <div class="card-body text-center">
-              <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
-                class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
-            </div>
-          </div>
+                <div class="card mb-3">
+                    <a href="https://www.thewalkingcompany.com"
+                    rel="noopener noreferrer" target="_blank">
+                    <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
+                    </a>
+                    <div class="card-body text-center">
+                      <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
+                        class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
+                    </div>
+                  </div>
          
                 <!-- Keeps sidebar space occuppied -->
             </div>
