--- a/WomensCasualShoes.html
+++ b/WomensCasualShoes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Casual Shoes - MiamiWalking.com - Miami</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -94,14 +94,14 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                <a href="https://www.amazon.com/SKECHERS-Womens-Stewart-Sesame-Natural/dp/B0CJ6337FP/ref=sr_1_56?crid=2TMOHCTPXGG2F&dib=eyJ2IjoiMSJ9.Zwr0NcfMgocot5vkzRMdEifdTIEvoBYwHU6zKitRXlx_DWrA6Qw0T4VyiP9Nsp6M_UA7bu_abgODbLXpZNjeTAqvvSCw6XLDhqHP1ppyLOIewpfSgfdtTkxDBvfPSEVCYlY3lbE8cCW_wZsK9Lt4-QKpojFSoRfoeS0CFhqHx_eJ_qmQ6FDi6N95gd7jinCThQgcd3EtFidErPCfjNv-edZSsb5QgR94sDCF7LXr1OnHPrSWnZnasaMuu8OA_kdLHw1BzKS1a0Oxj0BvUcFqQaCoJtZyptW90ycK0qoseO_JtXW6CgJSup1wgF3R5hpUAJrqSYBSGXxRtoUucn8gkfEJxG75QO1dT6TeGZBbNjUjTyhrKLlKaOCZbhIZMu81bV0ws4Yh5kJqBRtHAAu-N8oj4Fen-W5OneCLBzubkNCjfDervgbi1W5Fgo6v68qU.MRKAvLI2Dn-bsbF1OQOZ9xkeo7tGqzTZwamqACoLx7E&dib_tag=se&keywords=womens+casual+shoes&qid=1738348525&sprefix=womens+casual+shoes%2Caps%2C158&sr=8-56"
                                     rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Hoka Clifton 9 Womens 3 - Copy.jpg" class="card-img-top"
+                                    <img src="img/Skechers Women's Martha Stewart Bobs Sesame By the Bay.jpg" class="card-img-top mt-5 mb-3"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">Excercise
-                                        Shoes</a>
+                                    <a href="https://www.amazon.com/SKECHERS-Womens-Stewart-Sesame-Natural/dp/B0CJ6337FP/ref=sr_1_56?crid=2TMOHCTPXGG2F&dib=eyJ2IjoiMSJ9.Zwr0NcfMgocot5vkzRMdEifdTIEvoBYwHU6zKitRXlx_DWrA6Qw0T4VyiP9Nsp6M_UA7bu_abgODbLXpZNjeTAqvvSCw6XLDhqHP1ppyLOIewpfSgfdtTkxDBvfPSEVCYlY3lbE8cCW_wZsK9Lt4-QKpojFSoRfoeS0CFhqHx_eJ_qmQ6FDi6N95gd7jinCThQgcd3EtFidErPCfjNv-edZSsb5QgR94sDCF7LXr1OnHPrSWnZnasaMuu8OA_kdLHw1BzKS1a0Oxj0BvUcFqQaCoJtZyptW90ycK0qoseO_JtXW6CgJSup1wgF3R5hpUAJrqSYBSGXxRtoUucn8gkfEJxG75QO1dT6TeGZBbNjUjTyhrKLlKaOCZbhIZMu81bV0ws4Yh5kJqBRtHAAu-N8oj4Fen-W5OneCLBzubkNCjfDervgbi1W5Fgo6v68qU.MRKAvLI2Dn-bsbF1OQOZ9xkeo7tGqzTZwamqACoLx7E&dib_tag=se&keywords=womens+casual+shoes&qid=1738348525&sprefix=womens+casual+shoes%2Caps%2C158&sr=8-56"
+                                    rel="noopener noreferrer" target="_blank" class="btn btn-outline-light btn-primary">Skechers Women's Martha Stewart Bobs Sesame By the Bay</a>
                                 </div>
 
                             </div>
@@ -109,14 +109,14 @@
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
 
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
+                                <a href="https://www.amazon.com/Dr-Scholls-Shoes-Womens-Microfiber/dp/B07PJVNTGQ/ref=sr_1_23?crid=2TMOHCTPXGG2F&dib=eyJ2IjoiMSJ9.Zwr0NcfMgocot5vkzRMdEifdTIEvoBYwHU6zKitRXlx_DWrA6Qw0T4VyiP9Nsp6M_UA7bu_abgODbLXpZNjeTAqvvSCw6XLDhqHP1ppyLOIewpfSgfdtTkxDBvfPSEVCYlY3lbE8cCW_wZsK9Lt4-QKpojFSoRfoeS0CFhqHx_eJ_qmQ6FDi6N95gd7jinCThQgcd3EtFidErPCfjNv-edZSsb5QgR94sDCF7LXr1OnHPrSWnZnasaMuu8OA_kdLHw1BzKS1a0Oxj0BvUcFqQaCoJtZyptW90ycK0qoseO_JtXW6CgJSup1wgF3R5hpUAJrqSYBSGXxRtoUucn8gkfEJxG75QO1dT6TeGZBbNjUjTyhrKLlKaOCZbhIZMu81bV0ws4Yh5kJqBRtHAAu-N8oj4Fen-W5OneCLBzubkNCjfDervgbi1W5Fgo6v68qU.MRKAvLI2Dn-bsbF1OQOZ9xkeo7tGqzTZwamqACoLx7E&dib_tag=se&keywords=womens+casual+shoes&qid=1738348525&sprefix=womens+casual+shoes%2Caps%2C158&sr=8-23"
                                     rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Sketchers Women Slip On 2.jpg" class="card-img-top mb-4"
+                                    <img src="img/Dr. Scholl's Women's Ruler Loafer.jpg" class="card-img-top mb-5 mt-5"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual
-                                        Shoes</a>
+                                    <a href="https://www.amazon.com/Dr-Scholls-Shoes-Womens-Microfiber/dp/B07PJVNTGQ/ref=sr_1_23?crid=2TMOHCTPXGG2F&dib=eyJ2IjoiMSJ9.Zwr0NcfMgocot5vkzRMdEifdTIEvoBYwHU6zKitRXlx_DWrA6Qw0T4VyiP9Nsp6M_UA7bu_abgODbLXpZNjeTAqvvSCw6XLDhqHP1ppyLOIewpfSgfdtTkxDBvfPSEVCYlY3lbE8cCW_wZsK9Lt4-QKpojFSoRfoeS0CFhqHx_eJ_qmQ6FDi6N95gd7jinCThQgcd3EtFidErPCfjNv-edZSsb5QgR94sDCF7LXr1OnHPrSWnZnasaMuu8OA_kdLHw1BzKS1a0Oxj0BvUcFqQaCoJtZyptW90ycK0qoseO_JtXW6CgJSup1wgF3R5hpUAJrqSYBSGXxRtoUucn8gkfEJxG75QO1dT6TeGZBbNjUjTyhrKLlKaOCZbhIZMu81bV0ws4Yh5kJqBRtHAAu-N8oj4Fen-W5OneCLBzubkNCjfDervgbi1W5Fgo6v68qU.MRKAvLI2Dn-bsbF1OQOZ9xkeo7tGqzTZwamqACoLx7E&dib_tag=se&keywords=womens+casual+shoes&qid=1738348525&sprefix=womens+casual+shoes%2Caps%2C158&sr=8-23"
+                                    rel="noopener noreferrer" target="_blank" class="btn btn-outline-light btn-primary">Dr. Scholl's Women's Ruler Loafer </a>
                                 </div>
 
                             </div>
