--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Shoes - MiamiWalking.com - Miami</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/William305 Favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -94,8 +94,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
+                                <a href="WomensExerciseShoes.html" >
                                     <img src="img/Hoka Clifton 9 Womens 3 - Copy.jpg" class="card-img-top"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
@@ -109,9 +108,8 @@
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
 
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Sketchers Women Slip On 2.jpg" class="card-img-top mb-4"
+                                <a href="WomensCasualShoes.html">
+                                    <img src="img/Sketchers Women Slip On 2.jpg" class="card-img-top mb-4 mt-3"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
