Changed the casual shoe image in Women's Shoes to Dr. Scholl

--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -109,7 +109,7 @@
                             <div class="card">
 
                                 <a href="WomensCasualShoes.html">
-                                    <img src="img/Sketchers Women Slip On 2.jpg" class="card-img-top mb-4 mt-3"
+                                    <img src="img/Dr. Scholl's Women's Ruler Loafer.jpg" class="card-img-top mb-4 mt-3"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
