Added Advert in Main Section using d-block d-lg-none for smaller screens

--- a/WomensCasualShoes.html
+++ b/WomensCasualShoes.html
@@ -121,6 +121,18 @@
 
                             </div>
                         </div>
+                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
+                            <div class="card mb-3">
+                                <a href="https://www.thewalkingcompany.com"
+                                rel="noopener noreferrer" target="_blank">
+                                <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
+                                </a>
+                                <div class="card-body text-center">
+                                  <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
+                                    class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
+                                </div>
+                              </div>
+                        </div>
                     </div>
                 </div>
             </div>
