--- a/MensExerciseShoes.html
+++ b/MensExerciseShoes.html
@@ -119,24 +119,24 @@
                                     <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
                                     rel="noopener noreferrer" target="_blank" class="btn btn-outline-light btn-primary">
                                     HOKA Men's Gaviota 5 Sneaker</a>
-                                    <!-- <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a> -->
+                                   
                                 </div>
 
                             </div>
 
-                            <!-- <div class="card">
-
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Hoka Mens Gaviota.jpg" class="card-img-top mb-4"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                            
+                        </div>
+                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
+                            <div class="card mb-3">
+                                <a href="https://www.thewalkingcompany.com"
+                                rel="noopener noreferrer" target="_blank">
+                                <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Casual
-                                        Shoes</a>
+                                  <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
+                                    class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
                                 </div>
-
-                            </div> -->
+                              </div>
                         </div>
                     </div>
                 </div>
