Added http observatory best practice meta tags to all pages

--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
+  <meta http-equiv="Cache-Control" content="max-age=31536000">  
     <title>Women's Shoes - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <!-- Bootstrap CSS CDN -->
