--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
+  <meta http-equiv="Cache-Control" content="max-age=31536000">  
   
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
@@ -28,11 +31,11 @@
     gtag('config', 'G-N90RMFHVNE');
   </script>
 
-<script>
-  if (window.location.protocol !== "https:") {
-    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-  }
-  </script>
+  <script>
+    if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
+      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    }
+    </script>
 
 
 
