--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-   
 
 
     <link href="styles.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N90RMFHVNE"></script>
+
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -29,6 +29,12 @@
 
         gtag('config', 'G-N90RMFHVNE');
     </script>
+    <script>
+        if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
+          window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+        }
+        </script>
+    
 
 </head>
 
