Removed icon cdns from head and removed VCA Charity walk from CharityWalks.html

--- a/CharityWalks.html
+++ b/CharityWalks.html
@@ -3,22 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta name="referrer" content="no-referrer-when-downgrade">
-  <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
-  <meta http-equiv="Cache-Control" content="max-age=31536000">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta name="referrer" content="no-referrer-when-downgrade">
+    <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
+
+    <meta http-equiv="Cache-Control" content="max-age=31536000">
     <title>Charity Walks - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
-    <!-- Bootstrap CSS CDN -->
     <link href="bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="styles.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
@@ -32,10 +25,10 @@
     </script>
     <script>
         if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
-          window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+            window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
         }
-        </script>
-    
+    </script>
+
 
 </head>
 
@@ -52,9 +45,6 @@
             </h1>
         </div>
     </header>
-
-
-
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -67,13 +57,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                <a class="nav-link" href="Videos.html">Videos</a>
-              </li> -->
-                    <!-- <li class="nav-item">
-                <a class="nav-link" href="Food&Beverage.html">Food & Beverage</a>
-              </li> -->
-
                     <li class="nav-item">
                         <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
                     </li>
@@ -110,30 +93,6 @@
 
                 <div class="container">
                     <div class="row">
-                        <!-- Event 1 -->
-
-                        <div class="col-md-4 col-sm-6 col-12 mb-4">
-                            <div class="card h-100">
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/VCA Walk.JPG" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title">VCA Walk for the Animals</h5>
-                                    <p class="card-text"><strong>Date:</strong>February 1, 2025 </p>
-                                    <p class="card-text"><strong>Location:</strong> Las Olas Intracoastal Promenade Park
-                                        <br>
-                                        80 Las Olas Circle
-                                        Fort Lauderdale, FL 33316 United
-                                    </p>
-                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
-                                    <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                        class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
                                 <a href="https://www.comop.org/cupidschase/" rel="noopener noreferrer" target="_blank">
@@ -146,7 +105,6 @@
                                     <p class="card-text"><strong>Location:</strong> Higgs Beach Pavilion <br>
                                         1000 Atlantic Boulevard
                                         Key West, FL US 33040</p>
-                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://www.comop.org/cupidschase/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
@@ -166,9 +124,7 @@
                                     <p class="card-text"><strong>Location:</strong> Tropical Park <br>
                                         7900 SW 40th St
                                         Miami, FL 33155
-
                                     </p>
-                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://feedingsouthflorida.org/upcoming-events/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
@@ -189,7 +145,6 @@
                                     <p class="card-text"><strong>Location:</strong> Charnow Park <br> 300 Connecticut
                                         Street
                                         Hollywood, FL 33019</p>
-                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://sandyovarian.org/programs-and-events/events/sandy-sprint-5k-run-walk-hollywood"
                                         class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
@@ -212,7 +167,6 @@
                                         20405 Amphitheater Circle
                                         Boca Raton, FL 33498
                                     </p>
-                                    <!-- <p class="card-text"><strong>Details:</strong> Miscellaneous Details 1</p> -->
                                     <a href="https://www.walk4friendshipboca.com/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
@@ -236,7 +190,7 @@
                                         class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
-                        </div>          
+                        </div>
 
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
@@ -263,8 +217,9 @@
                             <div class="card h-100">
                                 <a href="https://secure.pancan.org/site/SPageServer/?pagename=purplestride_event_details&fr_id=2936"
                                     rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Pancreatic Cancer Palm Beach Chairty Walk 2025.jpg" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                                    <img src="img/Pancreatic Cancer Palm Beach Chairty Walk 2025.jpg"
+                                        class="card-img-top" alt="Event 1 Image - Description of the event"
+                                        loading="lazy">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title"> Pancreatic Cancer Action Network - PurpleStride Broward-Palm
@@ -389,15 +344,15 @@
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
         if ('serviceWorker' in navigator) {
-          window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              console.log('Service Worker registered with scope:', registration.scope);
-            }, function(err) {
-              console.log('Service Worker registration failed:', err);
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/sw.js').then(function (registration) {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                }, function (err) {
+                    console.log('Service Worker registration failed:', err);
+                });
             });
-          });
         }
-      </script>
+    </script>
 
 </body>
 
