--- a/ComfortShoes.html
+++ b/ComfortShoes.html
@@ -213,9 +213,11 @@
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function() {
             navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              console.log('Service Worker registered with scope:', registration.scope);
+              // Registration was successful
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }, function(err) {
-              console.log('Service Worker registration failed:', err);
+              // registration failed :(
+              console.log('ServiceWorker registration failed: ', err);
             });
           });
         }
