--- a/ExerciseShoes.html
+++ b/ExerciseShoes.html
@@ -215,14 +215,15 @@
     <!-- Bootstrap JS and Popper.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-    <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function() {
             navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              console.log('Service Worker registered with scope:', registration.scope);
+              // Registration was successful
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }, function(err) {
-              console.log('Service Worker registration failed:', err);
+              // registration failed :(
+              console.log('ServiceWorker registration failed: ', err);
             });
           });
         }
