--- a/index.html
+++ b/index.html
@@ -187,16 +187,17 @@
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('/sw.js').then(function (registration) {
-          console.log('Service Worker registered with scope:', registration.scope);
-        }, function (err) {
-          console.log('Service Worker registration failed:', err);
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/sw.js').then(function(registration) {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
         });
       });
     }
   </script>
-
 
 </body>
 
